# tmpl-hs

./: .gitignore  CHANGELOG.md  README.md  default.nix  tmpl.cabal
app/: Main.hs
src/: Tmpl.hs
test/: Spec.hs  TmplSpec.hs  reference.txt  t1.txt  t2.txt  template.txt  vars.txt  vars2.txt
