cabal-version:      2.4
name:               tmpl
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             David Wiles
maintainer:         me@davidwiles.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable tmpl
    main-is:          Main.hs
    build-depends:    libtmpl,
                      base,
                      optparse-applicative,
                      containers
    hs-source-dirs:   app
    default-language: Haskell2010

library libtmpl
    exposed-modules:
      Tmpl
    build-depends:    base,
                      filepath,
                      containers,
                      regex
    hs-source-dirs:   src
    default-language: Haskell2010

executable test
    main-is:          Spec.hs
    other-modules:
      TmplSpec
    build-depends:    libtmpl,
                      base,
                      hspec,
                      containers
    hs-source-dirs:   test
    default-language: Haskell2010
